# Simulator

./: .gitignore  CMakeLists.txt  Controler.cpp  Controler.h  Controller.cpp  Controller.h  Game.cpp  Game.h  Life.cpp  Life.h  Live.cpp  Live.h  Model.cpp  Model.h  ProgramMode.h  Simulator.cbp  Simulator.depend  View.cpp  View.h  display_main_menu.cpp  functions.cpp  functions.h  layout.cpp  main.cpp  main_menu.cpp  main_menu.h  play.cpp  play.h
Simulator/: Simulator.cbp  Simulator.depend  main.cpp
kolej/: kolej.cbp  kolej.depend  kolej.layout
